@@ -41,38 +41,97 @@ function image_styles_admin_menu() {
  * Implements hook_preprocess_HOOK for theme image_style_list.
  */
 function image_styles_admin_preprocess_image_style_list(&$variables) {
-  // Tell imagecache_actions_preprocess_image_style_list to preprocess the next
-  // call to theme_table()
-  $flag = TRUE;
-  image_styles_admin_preprocess_table($flag);
+  // Tell imagecache_actions_preprocess_table to preprocess the next call to
+  // theme_table()
+  $image_styles = array_values($variables['styles']);
+  image_styles_admin_preprocess_table($image_styles);
+
+  // Add CSS and JS files.
+  drupal_add_css(drupal_get_path('module', 'image_styles_admin') . '/image_styles_admin.css');
+  if (base_path() !== '/') {
+    $base_path = base_path();
+    drupal_add_css("
+        #image-styles .expand.inner { background-image: url($base_path/misc/menu-collapsed.png) }
+        #image-styles .expanded.expand.inner { background-image: url($base_path/misc/menu-expanded.png) }",
+      array('type' => 'inline'));
+  }
+  drupal_add_js(drupal_get_path('module', 'image_styles_admin') . '/image_styles_admin.js');
+
 }
 
 /**
  * Implements hook_preprocess_HOOK for theme table.
  */
 function image_styles_admin_preprocess_table(&$variables) {
-  static $is_in_image_style_list = FALSE;
+  static $image_styles = NULL;
 
-  if (is_bool($variables)) {
-    // Called from imagecache_actions_style_duplicate(): set flag
-    $is_in_image_style_list = $variables;
+  // If called from image_styles_admin_preprocess_image_style_list(), the
+  // parameter will be a sequential array.
+  if (key($variables) === 0) {
+    $image_styles = $variables;
   }
-  else if ($is_in_image_style_list) {
-    // Normal preprocess hook call: only process if theme('table', ...) has been
-    // called by theme_image_style_list()
+  else if (!empty($image_styles)) {
+    // Normal preprocess hook call: we only process if theme('table', ...) has
+    // been called via theme_image_style_list() and we have a non empty list of
+    // styles;
+
+    // Set an ID on the table so it can be targeted by our CSS.
+    $variables['attributes']['id'] = 'image-styles';
+
+    // Add a class to the Style name and Settings columns for styling.
+    foreach ($variables['header'] as &$cell) {
+      $temp_cell = is_string($cell) ? array('data' => $cell) : $cell;
+      $class_names = array(
+        'style-name' => t('Style name'),
+        'settings' => t('Settings'),
+      );
+      foreach ($class_names as $class => $name) {
+        if ($temp_cell['data'] == $name) {
+          $temp_cell['class'][] = $class;
+          $cell = $temp_cell;
+        }
+      }
+    }
+
+    // Add the effects column header.
+    array_splice($variables['header'], 1, 0, array(array(
+      'data' => t('Effects') . ' <span class="description expand" role="button">(' . t('expand all') . ')</span>',
+      'class' => array('effects expand-all')
+    )));
+
+    // Add a column with a summary of all effects to each row.
+    foreach ($variables['rows'] as $i => &$row) {
+      $style = $image_styles[$i];
+      $effects_list = array();
+      foreach ($style['effects'] as $key => $effect) {
+        $definition = image_effect_definition_load($effect['name']);
+        $effect = array_merge($definition, $effect);
+        $style['effects'][$key] = $effect;
+        $effect_details = isset($effect['summary theme']) ? theme($effect['summary theme'], array('data' => $effect['data'])) : '';
+        $effects_list[] = '<span class="details">' . $effect['label'] . ' ' . $effect_details . '</span>';
+      }
+      // Add the effects summary column to the row.
+      $effects_summary = array(
+        'data' => '<div class="inner expand" role="button">' . implode('<span class="separator">, </span>', $effects_list) . '</div>',
+        'class' => 'description'
+      );
+      array_splice($row, 1, 0, array($effects_summary));
+    }
 
     // Find the column with the edit link in it.
     $i = 0;
     $first_row = reset($variables['rows']);
-    foreach ($first_row as $i => $cell) {
-      if (strpos($cell, '>' . t('edit') . '<') !== FALSE) {
+    foreach ($first_row as $i => &$cell) {
+      $cell_data = is_array($cell) ? $cell['data'] : $cell;
+      if (strpos($cell_data, '>' . t('edit') . '<') !== FALSE) {
         break;
       }
     }
 
     // Increase the colspan for the column with the edit link to include the
-    // duplicate and export links as well.
-    $variables['header'][$i]['colspan'] += 2;
+    // duplicate and export links as well. This *should* be 2, but Drupal core
+    // specifies 1 more than should be there.
+    $variables['header'][$i]['colspan'] += 1;
 
     // Add the 2 links to each row by duplicating the edit link and then
     // changing the text and the link.
@@ -92,6 +151,6 @@ function image_styles_admin_preprocess_table(&$variables) {
     }
 
     // Don't preprocess subsequent calls to theme_table().
-    $is_in_image_style_list = FALSE;
+    $image_styles = NULL;
   }
 }
